Fixed sidebar for nav

--- a/style.css
+++ b/style.css
@@ -2,3 +2,18 @@ body {
    font-family: 'Montserrat', sans-serif;
    background: #eeeeee;
 }
+
+/* navbar */
+.sidebar {
+   height: 100vh;
+   background: linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.9)), url('images/img1.jpeg');
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+   box-shadow: 5px 7px 25px #999;
+}
+
+.bottom-border {
+   border-bottom: 1px groove #eeeeee;
+}
+/* end navbar */
