--- a/style.css
+++ b/style.css
@@ -13,6 +13,28 @@ body {
    box-shadow: 5px 7px 25px #999;
 }
 
+.sidebar-link {
+   transition: all .4s ease-out;
+}
+
+.sidebar-link:hover {
+   background: #444444;
+   border-radius: 5px;
+}
+
+.current {
+   background: #f44336;
+   border-radius: 7px;
+   box-shadow: 2px 5px 10px #111;
+   transition: all .3s;
+}
+
+.current:hover {
+   background: #f66436;
+   border-radius: 7px;
+   box-shadow: 2px 5px 10px #111;
+   transform: translateY(-1);
+}
 .bottom-border {
    border-bottom: 1px groove #eeeeee;
 }
