Task list items

--- a/style.css
+++ b/style.css
@@ -105,3 +105,9 @@ body {
    transform: translateY(-1px);
 }
 /* end cards */
+
+/* task list */
+.task-border {
+  border-left: 3px solid #f66436;
+}
+/* end task list */
